# warehouse_robot_comp219

./: CMakeLists.txt  README.md  package.xml  requirements.txt
config/: nav2_params.yaml  slam_toolbox.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/warehouse_robot_comp219/lib/warehouse_robot_comp219/: ai_nav_client.py  nav_menu_client  odom_tf_publisher.py
install/warehouse_robot_comp219/share/ament_index/resource_index/package_run_dependencies/: warehouse_robot_comp219
install/warehouse_robot_comp219/share/ament_index/resource_index/parent_prefix_path/: warehouse_robot_comp219
install/warehouse_robot_comp219/share/warehouse_robot_comp219/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_robot_comp219/share/warehouse_robot_comp219/cmake/: warehouse_robot_comp219Config-version.cmake  warehouse_robot_comp219Config.cmake
install/warehouse_robot_comp219/share/warehouse_robot_comp219/config/: nav2_params.yaml  ros_gz_bridge.yaml  slam_toolbox.yaml
install/warehouse_robot_comp219/share/warehouse_robot_comp219/environment/: ament_prefix_path.dsv  path.dsv
install/warehouse_robot_comp219/share/warehouse_robot_comp219/launch/: nav2.launch.py  sim.launch.py  slam.launch.py
install/warehouse_robot_comp219/share/warehouse_robot_comp219/maps/: warehouse_map.pgm  warehouse_map.yaml
install/warehouse_robot_comp219/share/warehouse_robot_comp219/urdf/: warehouse_robot.urdf  warehouse_robot.urdf.xacro
install/warehouse_robot_comp219/share/warehouse_robot_comp219/worlds/: warehouse.world
launch/: nav2.launch.py  sim.launch.py  sim_nav2.launch.py  slam.launch.py
log/: latest_build
maps/: warehouse_map.pgm  warehouse_map.yaml
scripts/: demo.sh
src/: nav_menu.cpp
urdf/: warehouse_robot.urdf.xacro
warehouse_robot_comp219/: ai_nav_client.py  odom_tf_publisher.py  set_initial_amcl_pose.py
